feat: added getPresignedUrls server action
